[package]
name = "rencfs-daemon"
version = "0.1.0"
edition = "2021"
exclude = [".github/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rencfs = { path = "../rencfs" }

tonic = "0.11"
tonic-types = "0.11.0"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "process"] }
tracing = {version = "0.1.40", features = ["max_level_trace", "release_max_level_info"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
thiserror = "1.0.58"
serde = { version = "1.0.198" }
serde_yaml = "0.9.34"
serde_json = "1.0.116"
keyring = "2.3.2"
directories = "5.0.1"
anyhow = "1.0.82"
libc = "0.2.153"
fuse3 = { version = "0.7.1", features = ["tokio-runtime", "unprivileged"] }
ctrlc = { version = "3.1.9", features = ["termination"] }

[package.metadata.aur]
depends = ["fuse3"]

[build-dependencies]
tonic-build = "0.11"
